# sessionary

./: .cursorrules  .dockerignore  .env.dev  .gitignore  .pr-review-progress.yaml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: SKILL.md
.claude/agents/: tdd-worker.md
.claude/commands/: make-issue.md  manage-project.md  project-draft-pr.md  project-link-pr.md  project-new-issue.md  project-status.md  project-update.md  resolve-issue.md  resolve-multiple-issue.md  token-usage.md
.claude/hooks/: block_main_commit.py  test_block_main_commit.py
.claude/subagents/: doc-updater.md
.github/ISSUE_TEMPLATE/: ⚒️-tech-issue.md
.github/workflows/: 1-draft-pr.yml  1-draft-pr.yml.disabled  1-link-pr-to-issue.yml  2-review-code.yml  2-test-backend.yml  2-test-frontend.yml  backend-test.yml  code-review.yml  deploy-staging-backend.yml  deploy-staging-frontend.yml  frontend-test.yml  playwright.yml  review-code.yml  test-backend.yml  test-frontend.yml  update-project-card.yml
.plans/: 46-plan.md
app/: config.py  main.py  models.py  service.py
app/api/: __init__.py  schemas.py
app/core/: events.py
app/db/: dependency.py  events.py  session.py  tables.py
app/depends/: auth.py  db.py  settings.py
app/lecture/: api.py  models.py  repository.py  schemas.py  service.py
app/ping/: api.py
app/user/: api.py  (+5 more)
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
backend/app/: main.py  models.py
backend/app/auth/: access.py  backend.py  manager.py  strategy.py  view.py
backend/app/containers/: __init__.py  application.py  auth.py  database.py  services.py
backend/app/core/: logging.py  middlewares.py  models.py
backend/app/core/auth/: access.py  backend.py  manager.py  strategy.py
backend/app/core/errors/: server_error.py  validation_error.py
backend/app/core/settings/: base.py  development.py  staging.py  test.py
backend/app/curation/: models.py  repository.py  service.py  view.py
backend/app/db/: session.py  tables.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 2025_02_04_1706_change_user_subscription_shema.py  2025_02_16_1436_add_lecture_columns.py  2025_12_13_enable_rls_all_tables.py  2026_01_13_2300_add_ticket_usage_table.py  2026_01_25_alter_ticket_usage_used_at_timezone.py  2026_01_27_add_session_fields_to_lesson.py  2026_05_05_drop_uq_user_lecture.py  2026_06_14_add_home_curation.py  2026_06_14_add_lesson_progress_table.py  2026_06_14_convert_subtitle_to_timestamp.py  2026_06_22_add_lesson_progress_position.py
backend/app/depends/: db.py  repository.py  service.py  settings.py
backend/app/lecture/: api.py  models.py  repository.py  service.py  view.py
backend/app/lesson/: models.py  repository.py  service.py  view.py
backend/app/ping/: api.py  view.py
backend/app/progress/: models.py  repository.py  service.py  view.py
backend/app/session/: models.py  repository.py  service.py  view.py
backend/app/sheetmusic/: minio.py  mock.py  models.py  service.py
backend/app/subscription/: models.py
backend/app/ticket/: models.py  repository.py  service.py  view.py
backend/app/user/: api.py  models.py  repository.py  service.py  view.py
backend/app/video/: cloudflare.py  minio.py  mock.py  models.py  service.py
backend/dev-scripts/: export_openapi.py  run-dev.sh  run-staging.sh  seed_admin.py
backend/tests/: conftest.py  containers.py  test_provider_upload.py
backend/tests/api/: conftest.py  test_cors_error.py  test_curation.py  test_lecture.py  test_lecture_admin.py  test_lesson_admin.py  test_ping.py  test_session.py  test_ticket.py  test_upload.py  test_user.py
backend/tests/mock/: redis_mock.py
backend/tests/progress/: conftest.py  test_lecture_progress.py  test_repository.py  test_service.py  test_tables.py  test_view.py
backend/tests/session/: test_models.py  test_repository.py  test_service.py
backend/tests/sheetmusic/: test_sheetmusic_provider.py
design-mockups/: lecture-detail-redesign.html  session-detail-type1-video-subtitle.html  session-detail-type4-practice-mode.html  session-detail-type5-tab-focus.html
dev-scripts/: db-manager.sh  run-dev.sh
docs/: project.md  testing.md
frontend/: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  openapi-ts.config.ts  package.json  playwright.config.ts  postcss.config.js  svelte.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts
infra/: README.md
prompt/: create-issue.md  crystalize-prompt.md  design-pipeline.md  issue-resolver.md
scripts/: start-server.sh
tests/: conftest.py
(+262 files in other folders)
