[tool.poetry]
name = "sessionary-backend-server"
description = ""
authors = ["junhcha <quffl9612@naver.com>"]
readme = "README.md"
version = "0.0.1"
include = ["app", "tests"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.115.1" }
SQLAlchemy = { extras = ["mypy"], version = "^2.0.29" }
alembic = "^1.11.1"
pytest = "^7.4.0"
pydantic = "^2.0.0"
asyncpg = "^0.28.0"
fastapi-users = { extras = ["oauth2", "redis", "sqlalchemy"], version = "^13" }
loguru = "^0.7.0"
psycopg2 = "^2.9.6"
httpx-oauth = "^0.13.0"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.23"
sqlalchemy-utils = "^0.41.1"
sqlalchemy2-stubs = "^0.0.2a38"
idna = "^3.7"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^24.3.0"
mypy = "^1.4.1"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = ['--asyncio-mode=auto']
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
