[project]
name = "sessionary-backend-server"
description = ""
authors = [
    {name = "junhcha", email = "quffl9612@naver.com"}
]
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.115.1",
    "SQLAlchemy[mypy]>=2.0.29",
    "alembic>=1.11.1",
    "pytest>=7.4.0",
    "pydantic>=2.0.0",
    "asyncpg>=0.28.0",
    "fastapi-users[oauth,redis,sqlalchemy]>=13",
    "loguru>=0.7.0",
    "psycopg2-binary>=2.9.6",
    "httpx-oauth>=0.13.0",
    "asgi-lifespan>=2.1.0",
    "pytest-asyncio>=0.23",
    "sqlalchemy-utils>=0.41.1",
    "sqlalchemy2-stubs>=0.0.2a38",
    "idna>=3.7",
    "aiosqlite>=0.20.0",
    "dependency-injector>=4.41.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = ['--asyncio-mode=auto']
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.isort]
known-first-party = ["app"]
combine-as-imports = true
split-on-trailing-comma = true
force-sort-within-sections = true

[tool.mypy]
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
